--- a/css/styles.css
+++ b/css/styles.css
@@ -3,29 +3,28 @@ html, body {
 	width: 100%;
 }
 #rightPane {
-width: 20%;
-margin-top: 230px;
-margin-bottom: -70px;
+	width: 20%;
+	margin-top: 230px;
+	margin-bottom: -70px;
 }
 #map{
-margin-top: 230px;
-margin-bottom: -70px;
+	margin-top: 230px;
  }
 #nav {
-width:750px;
-margin:0 auto;
-list-style:none;
+	width: 40px;
+	margin:0 auto;
+	list-style:none;
 }
 #nav li {
-float:center;
+	float:center;
 }
 #nav a {
-display:block;
-text-align:center;
-width:150px; /* fixed width */
-text-decoration:none; 
-font-family: 'Raleway', sans-serif;
-font-size: 1.2em;
+	display:block;
+	text-align:center;
+	width:100px; /* fixed width */
+	text-decoration:none; 
+	font-family: 'Raleway', sans-serif;
+	font-size: 1.2em;
 }
 .video-container {
 	position: relative;
@@ -33,21 +32,48 @@ font-size: 1.2em;
 video {
 	height: auto;
 	vertical-align: middle;
-	width: 100%;
+	width: 1000px;
+	position: relative;
+	left: 50%;
+	margin-left: -500px;
+}
+iframe {
+	height: 500px;
+	vertical-align: middle;
+	width: 1000px;
+	position: relative;
+	left: 50%;
+	margin-left: -500px;
 }
 .overlay-desc{
-  background: rgba(0,0,0,0);
-  position: absolute;
-  top: 0; right: 0; bottom: 0; left: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+	background: rgba(0,0,0,0);
+	position: absolute;
+	top: 0; right: 0; bottom: 0; left: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 h1 {
 	font-family: 'Raleway',sans-serif;
 	position: absolute;
 	text-align: center;
-	line-height: 40px;
-	padding-right: 100px;
-	padding-left: 100px;
+	line-height: 70px;
+	padding-right: 120px;
+	padding-left: 120px;
+	font-size: 3.5em;
+}
+#random {
+	font-family: 'Raleway',sans-serif;
+	position: relative;
+	line-height: 20px;
+	padding-right: 10px;
+	padding-left: 320px;
+	bottom: 150px;
+}
+#footer{
+	width: 300px;
+	height: 300px;
+	background-size: cover;
+	position: relative;
+	bottom: -50px;
 }
