--- a/css/styles.css
+++ b/css/styles.css
@@ -2,14 +2,11 @@ html, body {
 	height: 100%;
 	width: 100%;
 }
-#rightPane {
-	width: 20%;
-	margin-top: 230px;
-	margin-bottom: -70px;
+.navbar {
+	width: 1000px;
+	left: 50%;
+	margin-left: -500px;
 }
-#map{
-	margin-top: 230px;
- }
 #nav {
 	width: 40px;
 	margin:0 auto;
@@ -21,10 +18,14 @@ html, body {
 #nav a {
 	display:block;
 	text-align:center;
-	width:100px; /* fixed width */
+	width:90px; /* fixed width */
 	text-decoration:none; 
 	font-family: 'Raleway', sans-serif;
-	font-size: 1.2em;
+	font-size: 1.3em;
+}
+.nav-item a:hover {
+    color: #ffa900 !important;
+    cursor: pointer;
 }
 .video-container {
 	position: relative;
@@ -38,7 +39,7 @@ video {
 	margin-left: -500px;
 }
 iframe {
-	height: 500px;
+	height: 600px;
 	vertical-align: middle;
 	width: 1000px;
 	position: relative;
@@ -61,19 +62,96 @@ h1 {
 	padding-right: 120px;
 	padding-left: 120px;
 	font-size: 3.5em;
+	width: 800px;
 }
 #random {
+	width: 475px;
 	font-family: 'Raleway',sans-serif;
 	position: relative;
 	line-height: 20px;
-	padding-right: 10px;
-	padding-left: 320px;
-	bottom: 150px;
+	bottom: 290px;
+	left: 65%;
+	margin-left: -150px;
 }
 #footer{
-	width: 300px;
-	height: 300px;
+	width: 220px;
+	height: 220px;
 	background-size: cover;
 	position: relative;
-	bottom: -50px;
+	bottom: 70px;
+	left: 69%;
+	margin-left: -420px;
+}
+#champion{
+	width: 220px;
+	font-family: 'Raleway',sans-serif;
+	color: #2ab3d0;
+	font-size: 2.2em;
+	position: relative;
+	line-height: 40px;
+	bottom: -110px;
+	left: 64%;
+	margin-left: -650px;
+}
+#line {
+	height: 250px;
+	width: 3px;
+	position: relative;
+	bottom: 500px;
+	left: 62%;
+	margin-left: -370px;
+	background-color: #2ab3d0;	
+}
+#line2 {
+	height: 130px;
+	width: 3px;
+	position: absolute;
+	bottom: -100px;
+	left: 62%;
+	margin-left: -550px;
+	background-color: #2ab3d0;	
+}
+#about {
+	width: 750px;
+	font-family: 'Raleway',sans-serif;
+	font-size: 1.1em;
+	color: grey;
+	position: relative;
+	line-height: 20px;
+	bottom: 45px;
+	left: 50%;
+	margin-left: -300px;
+}
+#about2 {
+	width: 450px;
+	font-family: 'Raleway',sans-serif;
+	font-size: 1.1em;
+	color: grey;
+	position: absolute;
+	line-height: 20px;
+	bottom: -420px;
+	left: 50%;
+	margin-left: -470px;
+}
+#about3 {
+	width: 450px;
+	font-family: 'Raleway',sans-serif;
+	font-size: 1.1em;
+	color: grey;
+	position: absolute;
+	line-height: 20px;
+	bottom: -420px;
+	left: 50%;
+	margin-left: 30px;
+}
+#text {
+	font-family: 'Raleway',sans-serif;
+	font-size: 13.5px;
+}
+
+.esri-ui-bottom-left {
+	position: absolute;
+	left: -225px;
+	top: 0px;
+	z-index: 2;
 }
