--- a/css/styles.css
+++ b/css/styles.css
@@ -8,24 +8,34 @@ html, body {
 	margin-left: -500px;
 }
 #nav {
-	width: 40px;
+	width: 50px;
 	margin:0 auto;
 	list-style:none;
 }
 #nav li {
 	float:center;
+	padding-right: 80px;
 }
 #nav a {
 	display:block;
 	text-align:center;
-	width:90px; /* fixed width */
+	width:50px; /* fixed width */
 	text-decoration:none; 
 	font-family: 'Raleway', sans-serif;
 	font-size: 1.3em;
+	position: relative;
 }
 .nav-item a:hover {
     color: #ffa900 !important;
     cursor: pointer;
+}
+.btn-group-sm>.btn, .btn-sm {
+	background-color: white;
+	color: #7e856a;
+}
+.btn-group-sm>.btn, .btn-sm:hover {
+	background-color: #ffa900;
+	color: white;
 }
 .video-container {
 	position: relative;
@@ -106,9 +116,9 @@ h1 {
 	height: 130px;
 	width: 3px;
 	position: absolute;
-	bottom: -100px;
+	bottom: 150px;
 	left: 62%;
-	margin-left: -550px;
+	margin-left: -500px;
 	background-color: #2ab3d0;	
 }
 #about {
@@ -117,7 +127,6 @@ h1 {
 	font-size: 1.1em;
 	color: grey;
 	position: relative;
-	line-height: 20px;
 	bottom: 45px;
 	left: 50%;
 	margin-left: -300px;
@@ -151,7 +160,8 @@ h1 {
 
 .esri-ui-bottom-left {
 	position: absolute;
-	left: -225px;
+	left: -220px;
 	top: 0px;
 	z-index: 2;
+	bottom: -15px;
 }
