--- a/css/styles.css
+++ b/css/styles.css
@@ -80,7 +80,7 @@ h1 {
 	position: relative;
 	line-height: 20px;
 	bottom: 290px;
-	left: 65%;
+	left: 66%;
 	margin-left: -150px;
 }
 #footer{
@@ -88,7 +88,7 @@ h1 {
 	height: 220px;
 	background-size: cover;
 	position: relative;
-	bottom: 70px;
+	bottom: 100px;
 	left: 69%;
 	margin-left: -420px;
 }
@@ -99,7 +99,7 @@ h1 {
 	font-size: 2.2em;
 	position: relative;
 	line-height: 40px;
-	bottom: -110px;
+	bottom: -70px;
 	left: 64%;
 	margin-left: -650px;
 }
@@ -113,23 +113,33 @@ h1 {
 	background-color: #2ab3d0;	
 }
 #line2 {
-	height: 130px;
+	height: 140px;
 	width: 3px;
 	position: absolute;
-	bottom: 150px;
-	left: 62%;
+	bottom: -200px;
+	left: 63%;
 	margin-left: -500px;
 	background-color: #2ab3d0;	
+}
+#about_title {
+	font-family: 'Raleway',sans-serif;
+	color: #2ab3d0;
+	font-size: 2.2em;
+	position: absolute;
+	left: 64%;
+	margin-left: -650px;
+	bottom: -160px;
 }
 #about {
 	width: 750px;
 	font-family: 'Raleway',sans-serif;
 	font-size: 1.1em;
+	line-height: 20px;
 	color: grey;
-	position: relative;
-	bottom: 45px;
+	position: absolute;
+	bottom: -210px;
 	left: 50%;
-	margin-left: -300px;
+	margin-left: -290px;
 }
 #about2 {
 	width: 450px;
@@ -138,7 +148,7 @@ h1 {
 	color: grey;
 	position: absolute;
 	line-height: 20px;
-	bottom: -420px;
+	bottom: -470px;
 	left: 50%;
 	margin-left: -470px;
 }
@@ -149,7 +159,7 @@ h1 {
 	color: grey;
 	position: absolute;
 	line-height: 20px;
-	bottom: -420px;
+	bottom: -470px;
 	left: 50%;
 	margin-left: 30px;
 }
